# bytereader

./: Cargo.toml
src/: byte.rs  bytereader.rs  hex.rs  lib.rs  main.rs
