[package]
name = "bytereader"
version = "0.1.0"
authors = ["Luca Marcelli <ionix@protonmail.com>"]
include = ["src/lib.rs", "src/byte.rs", "src/hex.rs", "Cargo.toml"]
description = "Small and flexible package for easily reading files in binary format in a no_std enviroment."
license = "MIT"
homepage = "https://github.com/ioncodes/bytereader"
repository = "https://github.com/ioncodes/bytereader"
categories = ["byte","bytes","read","hex","file","fs","binary"]
edition = "2018"

[dependencies]
